# project-xc

./: .gitignore  CITATION.cff  DATA_LICENSE.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: functional_curation.yml  reference_correction.yml
.github/workflows/: pages.yml  validate.yml
data/: academy-curriculum.json  functionals.seed.json  libxc_snapshot.json  libxc_summary.json  program_aliases.json
docs/: PROJECT_CHARTER.md  data-model.md  reference-curation.md
docs/experiments/: initial-libxc-import.md
docs/plans/: 2026-07-13-quantum-chemistry-academy-master-plan.md  (+7 more)
schemas/: functional.schema.json  harness-task.schema.json
scripts/: build_site.py  check_site_links.py  enrich_aliases.py  enrich_formulas.py  harness_status.py  import_libxc.py  test_academy_core.js  test_academy_models.js  test_academy_validator.py  test_basis_progress.js  test_qc_approximation_interactions.js  test_qc_approximation_models.js  test_qc_atomic_interactions.js  test_qc_atomic_models.js  test_qc_geometry_interactions.js  test_qc_geometry_models.js  test_qc_hartree_fock_interactions.js  test_qc_hartree_fock_models.js  test_qc_many_electron_interactions.js  test_qc_many_electron_models.js  test_qc_math_models.js  validate_academy.py  validate_data.py
site/: basis-sets.html  functional.html  index.html  methodology.html  mo-builder.html  mo-diagrams.html  qc-approximations.html  qc-atoms.html  qc-foundations.html  qc-geometry.html  qc-hartree-fock.html  qc-many-electron.html  qc-math-language.html  quantum-chemistry.html  xc-functionals.html
(+30 files in other folders)
